--- a/app/src/main/res/layout/activity_my_workout_info.xml
+++ b/app/src/main/res/layout/activity_my_workout_info.xml
@@ -15,95 +15,81 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/selected_workout_name"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingStart="5dp"
-        android:text="Workout name"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#ffff"
-        android:singleLine="true"
-        android:background="@color/colorRed"
-        android:textColorHighlight="#000"/>
-
-    <!--Divider-->
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_marginTop="4dp"-->
-        <!--android:layout_marginBottom="4dp"-->
-        <!--android:background="@android:color/background_dark"/>-->
-
-    <EditText
-        android:id="@+id/selected_workout_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:text="Workout Desc"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <Button
-            android:id="@+id/update_workout_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorRed"
+        <EditText
+            android:id="@+id/selected_workout_name"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingStart="5dp"
+            android:text="Workout name"
+            android:textSize="24sp"
+            android:textStyle="bold"
             android:textColor="#ffff"
-            android:text="Update"
-            android:onClick="updateWorkout"
-            android:visibility="gone"/>
-        <Button
-            android:id="@+id/cancel_update_workout_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:singleLine="true"
             android:background="@color/colorRed"
-            android:layout_marginStart="5dp"
-            android:textColor="#ffff"
-            android:text="Cancel"
-            android:onClick="cancelUpdateWorkout"
-            android:visibility="gone"/>
-    </LinearLayout>
+            android:textColorHighlight="#000"/>
 
-    <!--&lt;!&ndash;Divider&ndash;&gt;-->
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_marginTop="4dp"-->
-        <!--android:layout_marginBottom="4dp"-->
-        <!--android:background="@android:color/background_dark"/>-->
+        <EditText
+            android:id="@+id/selected_workout_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="Workout Desc"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
-
-    <fragment
-        android:id="@+id/myWorkout_info_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:name="com.example.gleative.workit.fragments.WorkoutCustomExercisesListFragment"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout="@layout/fragment_exercise_list" />
+            <Button
+                android:id="@+id/update_workout_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorRed"
+                android:textColor="#ffff"
+                android:text="Update"
+                android:onClick="updateWorkout"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/cancel_update_workout_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorRed"
+                android:layout_marginStart="5dp"
+                android:textColor="#ffff"
+                android:text="Cancel"
+                android:onClick="cancelUpdateWorkout"
+                android:visibility="gone"/>
+        </LinearLayout>
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:onClick="addNewCustomExerciseToWorkout"
-        android:src="@drawable/ic_action_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <fragment
+            android:id="@+id/myWorkout_info_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:name="com.example.gleative.workit.fragments.WorkoutCustomExercisesListFragment"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:layout="@layout/fragment_exercise_list" />
 
 
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="20dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:onClick="addNewCustomExerciseToWorkout"
+            android:src="@drawable/ic_action_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-
+    </FrameLayout>
 
 
 </LinearLayout>
