--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -34,6 +34,16 @@
             android:onClick="createWorkout"
             android:src="@drawable/ic_action_add"/>
 
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/loading_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/loading_training"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            />
+
+
 
         <fragment
             android:id="@+id/workout_list_fragment"
